<resources>
    <string name="app_name">Gps Alarm</string>
    <string name="save">Save</string>
    <string name="stop_all">STOP ALL</string>
    <string name="stop">STOP</string>
    <string name="arrived">Arrived</string>
    <string name="you_have_entered_the_area">You have entered the %1$s area!</string>
    <string name="progressing">Progressing</string>
    <string name="on_the_way_to_the_destination">On the way to the destination</string>
    <string name="all_destinations_have_been_reached">All destinations have been reached</string>
    <string name="on_the_way_to_number_destinations">On the way to %1$s destinations</string>

    //----------
    <string name="permissions_title">Permissions</string>
    <string name="get_started">Get started</string>
    <string name="permissions_illustration_desc">Permissions illustration</string>
    <string name="permissions_instruction">To Continue, please provide the following permissions:</string>

    <string name="permission_camera_title">Camera</string>
    <string name="permission_camera_description">Allow this app to access the camera to take photos and record videos.</string>
    <string name="camera_permission_denied">Camera permission is required to use this feature. Please grant the permission in settings.</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="permission_location_title">Location Permission</string>
    <string name="permission_location_description">Allow this app to access your location to provide location-based features.</string>

    <string name="app_icon_description">Application logo</string>
    <string name="continue_button">Continue</string>
    <string name="swipe_next">Swipe next</string>

    <string name="onboard_title_1">Arrive Smarter</string>
    <string name="onboard_desc_1">Never miss your stop again. Set alarms that trigger when you reach your destination—no more worrying about falling asleep.</string>
    <string name="onboard_title_2">Set It &amp; Forget It</string>
    <string name="onboard_desc_2">Simply drop a pin on the map or enter address. We’ll handle the rest, waking you up when you’re there.</string>
    <string name="onboard_title_3">We Respect Your Privacy</string>
    <string name="onboard_desc_3">We only use your location to trigger alarms — nothing else. Your data stays on your device.</string>
    <string name="onboarding_image_description">Onboarding illustration</string>
    <string name="next">Next</string>

    <string name="loading_with_percent">Loading... %1$d%%</string>
    <string name="loading_complete">Loading complete!</string>

    <string name="close">Close</string>
    <string name="premium_banner">Premium banner</string>
    <string name="update_to_premium">Update to Premium!</string>
    <string name="ad_free">AD-FREE</string>
    <string name="ad_free_description">Use conveniently and quickly with the ad-free app</string>
    <string name="ad_free_icon">Ad-free icon</string>
    <string name="live_location_description">Use satellite maps for quick and convenient location tracking</string>
    <string name="live_location_icon">Live location icon</string>
    <string name="map_directions_description">The easiest and most convenient directions for you</string>
    <string name="map_directions_icon">Map directions icon</string>
    <string name="buy_premium_forever">Buy Premium Forever %s</string>
    <string name="watch_video_to_try_premium">Watch the video to try Premium</string>
    <string name="terms_agreement">By purchasing, you agree to the Term of Use, Restore and Privacy Policy. The subscription is billed immediately and will auto-renew. You can cancel your subscription at any time to avoid charges.</string>
    <string name="term_of_use">Term of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="restore">Restore</string>
    <string name="premium_activated">Premium Activated</string>
    <string name="search_3dot">Search...</string>
    <string name="no_results_for">No results for \"%1$s\"</string>
    <string name="show_more">Show more (every time)</string>
    <string name="show_less">Show less (1 per day)</string>

    <string name="active">Active</string>
    <string name="infinity_repeating">Infinity Repeating</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="name">Name</string>
    <string name="reminder">Reminder</string>
    <string name="address">Address</string>
    <string name="radius_meters">Radius (meters): %1$d</string>
    <string name="alarm_setting">Alarm Setting</string>
    <string name="volume">Volume</string>
    <string name="vibrate_level">Vibrate level:</string>
    <string name="duration_seconds">Duration: %1$ds</string>
    <string name="duration_seconds_short">%1$ds</string>
    <string name="fetch_false">Fetch false</string>
    <string name="undo">Undo</string>
    <string name="menu">Menu</string>
    <string name="icon_premium">Premium</string>
    <string name="no_data">No data</string>
    <string name="add">Add</string>
    <string name="duplicate_alarm">Duplicate alarm</string>
    <string name="delete_alarm">Delete alarm</string>
    <string name="pin_alarm">Pin alarm</string>
    <string name="separator">Separator</string>
    <string name="location_not_selected">Location not selected</string>
    <string name="location">Location</string>
    <string name="search">Search</string>
    <string name="collapse_search_bar">Collapse search bar</string>
    <string name="clear_search_query">Clear search query</string>
    <string name="cannot_find_reminder_try_again">Cannot find reminder, try again</string>
    <string name="these_permissions_are_required_for_the_app_to_function_properly">These permissions are required for the app to function properly.</string>
    <string name="start">Start</string>
    <string name="add_first_alarm">Your Alarms Are Empty. Add One!</string>
    <string name="post_notification">Post Notification</string>
    <string name="premium_purchase_failed_msg">Purchase Failed. Please try again.</string>
    <string name="premium_purchase_successful_msg">Purchase Successful! Wait few seconds to fully apply.</string>


</resources>