<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f0f0f0">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/ivPremiumBanner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/premium_banner"
                android:src="@drawable/upgrade_banner" />

            <TextView
                android:id="@+id/tvUpdateToPremium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/update_to_premium"
                android:textColor="@color/gold"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layoutFeatures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:background="@drawable/gradient_gold"
                        android:contentDescription="@string/ad_free_icon"
                        android:padding="16dp"
                        android:src="@drawable/ic_ad_block"
                        app:tint="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ad_free"
                            android:textColor="@color/gold"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ad_free_description"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBuyPremium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:paddingVertical="16dp"
                android:background="@drawable/gradient_gold_ripple"
                android:text="@string/buy_premium_forever"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWatchVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:visibility="gone"
                android:paddingVertical="16dp"
                android:text="@string/watch_video_to_try_premium"
                android:textColor="@color/gold"
                android:textSize="18sp"
                app:strokeColor="@color/gold"
                app:strokeWidth="1dp"
                style="?attr/materialButtonOutlinedStyle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDismiss"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:paddingVertical="16dp"
                tools:text="@string/show_more"
                android:textColor="@color/light_gray"
                android:textSize="18sp"
                style="?attr/borderlessButtonStyle" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:visibility="gone"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:text="@string/terms_agreement"
                android:textColor="@color/light_gray"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>